assests/css/styel.css
/* Google Fonts import */
@import url("https://fonts.googleapis.com/css?family=Merriweather:300,300i,400,400i,700|Montserrat:100,300,400,500,600,700&display=swap");

/* Common Styles */

/* :root {
  Color scheme
  --pearl-white: #e6e1c5;
  --smokey-black: #0a0908;
  --fresh-air: #a8e0ff;
  --light-blue: #5fbcff;
  --steele-blue: #3e78b2;
}  */

/* Body */
body {
  font-family: "Montserrat", sans-serif;
  overflow-x: hidden;
}

/* headings */
h1,
h2,
h3 {
  font-family: "Merriweather", serif;
}

h2 {
  font-size: 3rem;
  font-weight: 100;
  letter-spacing: 1px;
}

/* Paragraphs */
p {
  /* color: var(--smokey-black); */
  line-height: 1.5;
  font-size: 1.25rem;
}

/* End of Common Styles */

/* Utilities */
.upper {
  text-transform: uppercase;
}

.background-light {
  background-color: #e6e1c5;
  color: #0a0908;
}

.background-dark {
  background-color: #3e78b2;
  color: #e6e1c5;
}

.underline-dark {
  width: 20%;
  border-top: 2px solid #3e78b2;
}

.underline-light {
  width: 20%;
  border-top: 2px solid #5fbcff;
}
/* End of Utilities */

/* Nav Bar Section */
.navbar {
  /* background-color: var(--pearl-white); */
  /* position: absolute;
  top: 0;
  right: 0;
  left: 0; */
  z-index: 3;
}

/* Scrolled class added whn the page is scrolled */
.scrolled {
  background: #0a0908;
  opacity: 0.7;
  border-bottom: 3px solid #a8e0ff;
  transition: all 1s;
}

.navbar .navbar-brand {
  font-size: 1.5rem;
  color: #e6e1c5;
}

.navbar .nav-link {
  font-size: 1.25rem;
  margin: 0 5px 0 5px;
  color: #e6e1c5;
  transition: all 0.5s;
}

.navbar .nav-link:hover {
  color: #5fbcff;
  border-bottom: 1px solid #5fbcff;
  padding-bottom: 0;
}
/* End Nav Bar Section */

/* Showcase Section */
#showcase {
  background: url("../img/showcase.jpg") bottom center / cover no-repeat;
  width: 100vw;
  height: 95vh;
  position: fixed;
  color: #fff;
  position: relative;
}

#showcase .main-overlay {
  background: rgba(0, 0, 0, 0.4);
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 1;
}

#showcase .container {
  z-index: 2;
}

#showcase h1 {
  /* color: #fff; */
  font-size: 6rem;
  font-weight: 100;
  letter-spacing: 1px;
}

/* #showcase h2 {
  font-size: 4rem;
  font-weight: 100;
  letter-spacing: 1px;
} */

#showcase p {
  color: #fff;
  font-size: 1.5rem;
  font-weight: 100;
  letter-spacing: 1px;
}

#showcase #contact-btn {
  background-color: #e6e1c5;
  color: #0a0908;
  border: none;
  outline: none;
  font-size: 1.5rem;
  border-radius: 2rem;
  transition: all 0.2s;
  margin-top: 10px;
}

#showcase #contact-btn:hover {
  background-color: #0a0908;
  color: #e6e1c5;
}

/* End section: Showcase */

/* Section: About-me */

/* #about-me h2 {
  font-size: 3rem;
  font-weight: 100;
  letter-spacing: 1px;
} */

#about-me i {
  color: #3e78b2;
}

/* End Section: About-me */

/* Section: Skills */

/* #skills h2 {
  font-size: 3rem;
  font-weight: 100;
  letter-spacing: 1px;
} */

#skills i {
  color: #5fbcff;
}

/* End Section: Skills */

/* Section: Projects */
#projects i {
  color: #3e78b2;
}

/* End Section: Projects */

/* Section: Contact-me  */
#contact-me img {
  border-radius: 100%;
}

#contact-me .form-btn {
  background-color: #0a0908;
  border: none;
  outline: none;
  color: #e6e1c5;
  transition: all 1s;
  border-radius: 2rem;
}

#contact-me .form-btn:hover {
  background-color: #e6e1c5;
  color: #0a0908;
}
/* End Section: Contact-me */

/* Footer: Section */
#main-footer p {
  font-size: 0.9rem;
  color: #3e78b2;
}

#main-footer a {
  color: #3e78b2;
  transition: color 1s;
}

#main-footer a:hover {
  color: #5fbcff;
}
/* End Footer: Section */

/* Media Quiries */
@media (max-width: 900px) {
  /* Navbar */
  .navbar {
    background-color: #0a0908;
    color: #e6e1c5;
    opacity: 0.6;
  }

  .navbar .nav-link {
    padding-bottom: 0;
  }

  .navbar .nav-link:hover {
    border-bottom: none;
  }
  /* End Of Navbar */

  /* Showcase */
  #showcase h1 {
    font-size: 4rem;
  }

  #showcase h2 {
    font-size: 2.5rem;
  }

  #showcase p {
    font-size: 0.8rem;
    margin-top: 5px;
  }

  #showcase #contact-btn {
    font-size: 0.8rem;
  }
}

@media (max-width: 768px) {
  h2 {
    font-size: 2rem;
  }

  p {
    font-size: 0.8rem;
  }

  #showcase {
    height: 85vh;
  }

  #showcase h1 {
    font-size: 3.5rem;
  }
}

